tests/baselines/reference/mappedTypeInferenceErrors.errors.txt
tests/cases/conformance/types/mapped/mappedTypeInferenceErrors.ts(13,26): error TS2339: Property 'bar' does not exist on type '{ x: number; y: number; }'.
tests/cases/conformance/types/mapped/mappedTypeInferenceErrors.ts(16,9): error TS2322: Type 'number' is not assignable to type '() => {}'.


==== tests/cases/conformance/types/mapped/mappedTypeInferenceErrors.ts (2 errors) ====
    // Repro from #19316
    
    type ComputedOf<T> = {
        [K in keyof T]: () => T[K];
    }
    
    declare function foo<P, C>(options: { props: P, computed: ComputedOf<C> } & ThisType<P & C>): void;
    
    foo({
        props: { x: 10, y: 20 },
        computed: {
            bar(): number {
                let z = this.bar;
                             ~~~
!!! error TS2339: Property 'bar' does not exist on type '{ x: number; y: number; }'.
                return 42;
            },
            baz: 42
            ~~~
!!! error TS2322: Type 'number' is not assignable to type '() => {}'.
!!! related TS6500 tests/cases/conformance/types/mapped/mappedTypeInferenceErrors.ts:16:9: The expected type comes from property 'baz' which is declared here on type 'ComputedOf<{ bar: number; baz: {}; }>'
        }
    });
    